--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
     <meta property="og:locale" content="ja_JP">
     <meta property="og:type" content="website">
     <meta property="og:title" content="労働契約計算補助ツール">
-    <meta property="og:url" content="https://seginus.jp/calc/">
+    <meta property="og:url" content="https://calculator-389a6.web.app/Minashi">
     <meta property="og:description" content="労働契約における給与・休日数の判定をするための計算補助ツールです。">
-    <meta property="og:image" content="https://seginus.jp/calc/logo192.png">
+    <meta property="og:image" content="https://calculator-389a6.web.app/logo192.png">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
     <meta property="fb:app_id" content="376229836611652">
