--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="労働契約における給与・休日数の判定をするための計算補助ツールです。"
+      content="労働契約における給与・休日数の判定をするための計算補助ツールです。みなし残業を含む月給から基本時給・残業代抜きの賃金を算出したり、条件から年間休日数をカウントしたりします。"
     />
-    <meta property="og:site_name" content="労働契約計算補助ツール">
+    <meta property="og:site_name" content="労働契約計算">
     <meta property="og:locale" content="ja_JP">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="労働契約計算補助ツール">
+    <meta property="og:title" content="労働契約計算">
     <meta property="og:url" content="https://calculator-389a6.web.app/Minashi">
     <meta property="og:description" content="労働契約における給与・休日数の判定をするための計算補助ツールです。">
     <meta property="og:image" content="https://calculator-389a6.web.app/logo192.png">
@@ -40,7 +40,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>労働契約計算補助ツール</title>
+    <title>労働契約計算</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
